userdir-ldap (0.3.54) unstable; urgency=low

  * Add new attribute mailSpamOptOut to turn on/off spam filtering
    entirely
  * Add support for this attribute in ud-info taking into account that
    only boolean values are acceptable
  * ud-generate: Add IPv6 addresses to debianhosts 
    (Patch by Thomas Viehmann)

 --

userdir-ldap (0.3.53) unstable; urgency=low

  * Properly show shadowlastchange and mail disabled message when
    locking an account, but not disabling email.  It was written to
    ldap correctly, but we updated the data to display wrongly.
  * Fix formatting of PGP fingerprints - the double space was always
    one element too early.
  * Do not call FinishConfirmSudopassword if we already decided to
    not commit this change mail because of parse errors.

 -- Peter Palfrader <weasel@debian.org>  Mon, 08 Dec 2008 11:39:54 +0100

userdir-ldap (0.3.52) unstable; urgency=low

  * Remove cruft comment.
  * Fix group does not exist warning (layout/spacing issues).
  * call addGroups with the proper number of arguments, when doing so
    recursively.
  * Also do the subgroups/transitive stuff dance when considering
    if a user is in a group for exporting them to a host in the
    first place.

 -- Peter Palfrader <weasel@debian.org>  Sun, 23 Nov 2008 22:09:07 +0100

userdir-ldap (0.3.51) unstable; urgency=low

  * Update template/welcome-message-800 to match the actual template used
    on db.debian.org.
  * Add subgroup support:  A group can now have subgroups.  This means
    that if a user is a member of a group he also becomes a member of
    all its subgroups.  E.g. members of a wb-all group will automatically
    be members of wb-i386, wb-arm, wb-mips, etc.  [Luk Claes]
  * Extend that support so that subgroups work on a per host basis too,
    so that for instance the debbugs group can be in group
    maillog@rietz.debian.org.
  * Add hostnames from the host purpose field to the ssh_known_hosts
    file [Thomas Viehmann].
