@@ -6,6 +6,9 @@ userdir-ldap (0.3.54) unstable; urgency=low
     only boolean values are acceptable
   * ud-generate: Add IPv6 addresses to debianhosts 
     (Patch by Thomas Viehmann)
+  * ud-info, userdir_ldap.py: remove function getpass and use the one 
+    from python standard library getpass
+    (Patch by Thomas Viehmann)
 
  --
 
